Fixed h3 inside sidebar + nested div have wrong margin-top

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -48,7 +48,7 @@ h3, h4 { font-weight:normal; }
 /* Sidebar */
 #sidebar h3 { display: block; background-color: #edf3fe; border-bottom: 1px solid #dcdcdc; color: #333;
               font-size: 13px; margin: 10px 0 5px -5px; padding: 6px; font-weight: bold; }
-#sidebar h3:first-child, #sidebar div:first-child+h3 { margin-top:0; }
+#sidebar > h3:first-child, #sidebar > div:first-child+h3 { margin-top:0; }
 #admin-menu a.selected { background-color:#dddde3; background-position:8px center; display:block; padding:3px 30px 2px !important; margin-left:-8px; margin-right:20px;
                       color:#2A5685; font-weight:bold; border-radius:4px; box-shadow: inset 0 0 1px #bbbbf5; }
 
